--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -22,6 +22,12 @@
     #grid-info {
         grid-area: info;
     }
+    h2 {
+        margin-bottom: 0.5rem;
+    }
+    p {
+        margin-top: 0;
+    }
 }
 
 /* Responsive design */
