Add header/footer layout styling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,6 @@
 @use 'components/components';
 @use 'components/animations';
 
+@use 'layout/header_footer';
 @use 'layout/misc';
 @use 'layout/grid';
