--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -1,6 +1,7 @@
 /* Import components */
 @use '../components/components';
 
+/* For all viewports */
 #data-container {
     height: 80vh;
     grid-auto-rows: auto;
