--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -65,6 +65,7 @@
                 margin-top: 100%;
                 width: 90%;
                 margin-left: 5%;
+                margin-right: 5%;
                 text-align: center;
                 #earth {
                     width: 95%;
@@ -76,9 +77,12 @@
             grid-column-end: 3;
             grid-row-start: 1;
             grid-row-end: 2;
-            margin-top: 25%;
+            margin-top: 15%;
             width: 100%;
             margin-left: 0;
+            section {
+                max-width: 40vw;
+            }
         }
     }
 }
