Add active mixed content warning

--- a/src/styles/layout/_misc.scss
+++ b/src/styles/layout/_misc.scss
@@ -28,6 +28,9 @@ main {
         padding: 1rem;
         margin-top: calc(40vh - 3rem);
     }
+    #warning {
+        text-align: center;
+    }
 }
 
 /* Loader */
